@@ -1,4 +1,10 @@
-2005-10-24  Oliver Schwartz <Oliver.Schwartz@gmx.de>
+2005-11-01  Henning Meier-Geinitz <henning@meier-geinitz.de>
+
+	* sanei/sanei_usb.c: Added support for detecting vendor and
+	  product id with FreeBSD kernel scanner driver (based on patch in
+	  FreeBSD ports).
+
+2005-10-31  Oliver Schwartz <Oliver.Schwartz@gmx.de>
 
 	* backend/snapscan.c backend/snapscan-scsi.c backend/snapscan.h
 	  backend/snapscan-options.c doc/descriptions/snapscan.desc:
